// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`collapsed.md - markdown-verify 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
![hello][]

=====================================output=====================================
![hello][]

================================================================================
`;

exports[`full.md - markdown-verify 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
![hello][world]

=====================================output=====================================
![hello][world]

================================================================================
`;

exports[`full-no-alt.md - markdown-verify 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
![][world]

=====================================output=====================================
![][world]

================================================================================
`;

exports[`shortcut.md - markdown-verify 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
![hello]

=====================================output=====================================
![hello]

================================================================================
`;
